auth-core library code cleanup - replace deprecated calls, etc
Signed-off-by: Henry Avetisyan <hga@yahooinc.com>